# mozapkpublisher

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  MANIFEST.in  README.md  conftest.py  pyproject.toml  requirements-codecov.txt  requirements-codecov.txt.in  requirements-coveralls.txt  requirements-coveralls.txt.in  requirements-dev.txt  requirements-test.txt  requirements-test.txt.in  requirements.txt  requirements.txt.in  setup.py  tox.ini
.github/workflows/: pypi-publish.yml  python-package.yml
app/: .gitignore  build.gradle  build.sh
app/gradle/wrapper/: gradle-wrapper.properties
app/src/main/: AndroidManifest.xml
mozapkpublisher/: apk.py  apk_metadata.py  base.py  check_apks.py  check_rollout.py  exceptions.py  get_apk.py  get_hag_token.py  get_l10n_strings.py  get_sgs_token.py  googleplay.py  main_logging.py  push_aab.py  push_apk.py  store_l10n.py  storel10n.py  update_apk_description.py  upload_review_replies.py  utils.py
mozapkpublisher/common/: apk.py  base.py  exceptions.py  googleplay.py  main_logging.py  store.py  store_l10n.py  utils.py
mozapkpublisher/common/aab/: __init__.py  extractor.py
mozapkpublisher/common/apk/: __init__.py  checker.py  extractor.py  history.py
mozapkpublisher/hag_api/: __init__.py  auth.py  error.py  utils.py
mozapkpublisher/sgs_api/: __init__.py  auth.py  content_info.py  error.py  utils.py
mozapkpublisher/test/: helpers.py  test_apk.py  test_base.py  test_check_rollout.py  test_get_apk.py  test_get_l10n_strings.py  test_googleplay.py  test_push_aab.py  test_push_apk.py  test_store_l10n.py  test_update_apk_description.py  test_upload_review_replies.py  test_utils.py
mozapkpublisher/test/common/: test_apk.py  test_base.py  test_googleplay.py  test_store.py  test_store_l10n.py  test_utils.py
mozapkpublisher/test/data/: SHA512SUMS  blob  checksums.broken  checksums.old  checksums.tc  fennec-61.0-google-play-strings.json  replies.csv
mozapkpublisher/test/hag/: common.py  fixtures.py  test_app_info.py  test_auth.py  test_dry_run.py  test_submit.py  test_upload.py
mozapkpublisher/test/integration/: test_check_apks.py  test_get_apk.py  test_get_l10n_strings.py  test_push_apk.py  test_upload_hag.py  test_upload_sgs.py
mozapkpublisher/test/sgs/: common.py  fixtures.py  test_auth.py  test_content_info.py  test_dry_run.py  test_rollout.py  test_submit.py
requirements/: base.in  base.txt  coveralls.txt  test.in  test.txt
(+10 files in other folders)
