[project]
name = "mozapkpublisher"
version = "10.0.1"
description = "Scripts to get and push Firefox for Android to Google Play Store"
url = "https://github.com/mozilla-releng/mozapkpublisher"
license = "MPL-2.0"
readme = "README.md"
authors = [
    { name = "Mozilla Release Engineering", email = "release+python@mozilla.com" }
]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
requires-python = ">=3.11"
dependencies = [
    "aiohttp",
    "google-api-python-client",
    "google-auth",
    "mozilla-version",
    "pyaxmlparser",
    "requests",
    "pyjwt",
]

[dependency-groups]
dev = [
    "aioresponses",
    "coverage",
    "flake8",
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "mock",
    "requests_mock",
    "cryptography",
]
coveralls = [
    "coveralls"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope="function"

[tool.hatch.build]
exclude = [
  "__pycache__",
  ".github/",
  ".pyup.yml",
  ".coveragerc",
  ".gitignore",
  "*.apk",
]

